Add image upload functionality and display in question interface
- Updated index.html to display an image associated with the current question.
- Enhanced moderator.html to allow image uploads via file input and clipboard paste.
- Implemented image processing and validation in JavaScript, including size limit checks.
- Modified GameState struct in main.go to include an optional image field for questions.

--- a/index.html
+++ b/index.html
@@ -125,6 +125,13 @@
                 :class="{'animate-pulse-slow': !currentQuestion}">
             </div>
             
+            <!-- Question Image -->
+            <div x-show="currentQuestion?.image" class="mb-6 flex justify-center">
+                <img :src="currentQuestion?.image" 
+                    class="max-w-full max-h-96 object-contain rounded-lg border-2 border-base-surface1 shadow-lg"
+                    alt="Question image">
+            </div>
+            
             <!-- Countdown Timer -->
             <div x-show="countdownTime" 
                 class="flex justify-center items-center mb-6">
