--- a/moderator.html
+++ b/moderator.html
@@ -183,6 +183,35 @@
                                 </div>
                                 <div class="text-xs text-base-overlay0 mb-2" x-text="'Submitted: ' + formatTime(answer.submittedAt)"></div>
                                 <p class="text-base-subtext" x-text="answer.text"></p>
+                                
+                                <!-- Voting Display (moderator view - read-only) -->
+                                <div x-show="Object.keys(answer.votes || {}).length > 0" class="mt-3 pt-3 border-t border-base-surface1">
+                                    <div class="flex items-center justify-between">
+                                        <div class="flex items-center space-x-3">
+                                            <div class="flex items-center space-x-1 text-base-green">
+                                                <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20">
+                                                    <path d="M2 10.5a1.5 1.5 0 113 0v6a1.5 1.5 0 01-3 0v-6zM6 10.333v5.43a2 2 0 001.106 1.79l.05.025A4 4 0 008.943 18h5.416a2 2 0 001.962-1.608l1.2-6A2 2 0 0015.56 8H12V4a2 2 0 00-2-2 1 1 0 00-1 1v.667a4 4 0 01-.8 2.4L6.8 7.933a4 4 0 00-.8 2.4z"/>
+                                                </svg>
+                                                <span x-text="getUpvoteCount(answer)"></span>
+                                            </div>
+                                            <div class="flex items-center space-x-1 text-base-red">
+                                                <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20">
+                                                    <path d="M18 9.5a1.5 1.5 0 11-3 0v-6a1.5 1.5 0 013 0v6zM14 9.667v-5.43a2 2 0 00-1.106-1.79l-.05-.025A4 4 0 0011.057 2H5.64a2 2 0 00-1.962 1.608l-1.2 6A2 2 0 004.44 12H8v4a2 2 0 002 2 1 1 0 001-1v-.667a4 4 0 01.8-2.4l1.4-1.866a4 4 0 00.8-2.4z"/>
+                                                </svg>
+                                                <span x-text="getDownvoteCount(answer)"></span>
+                                            </div>
+                                        </div>
+                                        <div class="text-sm font-semibold" 
+                                            :class="{
+                                                'text-base-green': answer.voteScore > 0,
+                                                'text-base-red': answer.voteScore < 0,
+                                                'text-base-overlay0': answer.voteScore === 0
+                                            }">
+                                            <span x-text="answer.voteScore > 0 ? '+' + answer.voteScore : answer.voteScore"></span>
+                                        </div>
+                                    </div>
+                                    <div class="text-xs text-base-overlay0 mt-2" x-text="getVotersList(answer)"></div>
+                                </div>
                             </div>
                         </template>
                     </template>
@@ -468,6 +497,36 @@
                 getSortedAnswers(answers) {
                     if (!answers || !Array.isArray(answers)) return [];
                     return [...answers].sort((a, b) => new Date(a.submittedAt) - new Date(b.submittedAt));
+                },
+
+                getUpvoteCount(answer) {
+                    if (!answer.votes) return 0;
+                    return Object.values(answer.votes).filter(vote => vote === true).length;
+                },
+
+                getDownvoteCount(answer) {
+                    if (!answer.votes) return 0;
+                    return Object.values(answer.votes).filter(vote => vote === false).length;
+                },
+
+                getVotersList(answer) {
+                    if (!answer.votes) return '';
+                    const upvoters = Object.entries(answer.votes)
+                        .filter(([name, vote]) => vote === true)
+                        .map(([name]) => name);
+                    const downvoters = Object.entries(answer.votes)
+                        .filter(([name, vote]) => vote === false)
+                        .map(([name]) => name);
+                    
+                    let result = '';
+                    if (upvoters.length > 0) {
+                        result += `👍 ${upvoters.join(', ')}`;
+                    }
+                    if (downvoters.length > 0) {
+                        if (result) result += ' | ';
+                        result += `👎 ${downvoters.join(', ')}`;
+                    }
+                    return result;
                 },
 
                 updatePlayerScore(playerName, newScore) {
